--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
-        android:name=".JunkPileApp"
+        android:name=".Aimybirds"
         android:allowBackup="true"
         android:icon="@null"
         android:label="@string/app_name"
